--- a/TyDtk/Base.lproj/Main.storyboard
+++ b/TyDtk/Base.lproj/Main.storyboard
@@ -1157,6 +1157,7 @@
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="tableViewWeek" destination="0ES-tA-h4u" id="Tis-FT-oUa"/>
+                        <segue destination="psZ-67-bwE" kind="show" identifier="topicStar" id="Uqq-Jq-m50"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kR7-Xg-bxU" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1315,6 +1316,7 @@
                         <outlet property="lastButton" destination="H4o-p0-GJj" id="eLF-g1-BCk"/>
                         <outlet property="nextButton" destination="92m-Up-Ceo" id="3uG-nb-58f"/>
                         <outlet property="scrollViewPater" destination="MfY-j0-f7u" id="Gxm-Pj-sFj"/>
+                        <outlet property="viewNaviHeardView" destination="acp-6y-00J" id="tz1-iL-c6a"/>
                         <segue destination="sNW-13-Bm9" kind="show" identifier="topicAnalysis" id="yeD-5v-yXS"/>
                     </connections>
                 </viewController>
@@ -1489,12 +1491,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5di-MW-dFB">
-                                <rect key="frame" x="135" y="278" width="94" height="19"/>
-                                <state key="normal" title="Button" image="bj01"/>
-                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="每周精选试题" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mUC-g6-OBH">
+                                <rect key="frame" x="177" y="282" width="100" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
-                        <color key="backgroundColor" red="0.77091916360000001" green="0.84952596749999998" blue="0.9031413613" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                 </viewController>
@@ -2137,7 +2141,6 @@
     </scenes>
     <resources>
         <image name="arrow_down" width="18" height="10"/>
-        <image name="bj01" width="16" height="16"/>
         <image name="btm_icon1" width="20" height="20"/>
         <image name="btm_icon4" width="20" height="20"/>
         <image name="ic_business_detail_mark" width="10" height="10"/>
@@ -2149,4 +2152,7 @@
         <image name="top_backbtn" width="12" height="20"/>
         <image name="user_icon.png" width="13" height="14"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="rlR-Gj-gBN"/>
+    </inferredMetricsTieBreakers>
 </document>
