--- a/TyDtk/AnalysisQtype3Cell.xib
+++ b/TyDtk/AnalysisQtype3Cell.xib
@@ -6,11 +6,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="226" id="JtH-5I-gPb" customClass="AnalysisQtype3TableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="417" height="226"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="150" id="JtH-5I-gPb" customClass="AnalysisQtype3TableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="417" height="150"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="JtH-5I-gPb" id="TTP-Dr-whr">
-                <rect key="frame" x="0.0" y="0.0" width="417" height="225"/>
+                <rect key="frame" x="0.0" y="0.0" width="417" height="149"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1、" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FVn-j3-D50">
@@ -61,86 +61,11 @@
                             <action selector="buttonCollectClick:" destination="JtH-5I-gPb" eventType="touchUpInside" id="JWI-Lc-Hsg"/>
                         </connections>
                     </button>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="答题正确" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fc4-IO-OaC">
-                        <rect key="frame" x="90" y="70" width="60" height="20"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="20" id="3ii-mo-c7g"/>
-                            <constraint firstAttribute="width" constant="60" id="5f6-K2-RCe"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="你的答案：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="31Q-XO-3PJ">
-                        <rect key="frame" x="15" y="100" width="70" height="20"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="70" id="Qb3-v2-6Sn"/>
-                            <constraint firstAttribute="height" constant="20" id="zuc-qA-UCh"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="exF-bl-lID">
-                        <rect key="frame" x="90" y="100" width="60" height="20"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="60" id="kOw-Wu-7Pi"/>
-                            <constraint firstAttribute="height" constant="20" id="v43-uW-uK2"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="B" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H4x-aX-Ea7">
-                        <rect key="frame" x="275" y="100" width="60" height="20"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="20" id="2uo-1I-PAo"/>
-                            <constraint firstAttribute="width" constant="60" id="P11-Jh-Xqo"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="正确答案：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="081-8M-11Z">
-                        <rect key="frame" x="200" y="100" width="70" height="20"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="20" id="Qg3-5E-0OR"/>
-                            <constraint firstAttribute="width" constant="70" id="dvf-Nf-6oZ"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="答题状态:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gxx-8Y-OlK">
-                        <rect key="frame" x="15" y="70" width="70" height="20"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="70" id="2Hc-7l-vHQ"/>
-                            <constraint firstAttribute="height" constant="20" id="cQb-DF-jIN"/>
-                            <constraint firstAttribute="height" constant="20" id="fMo-WT-2nG"/>
-                            <constraint firstAttribute="width" constant="70" id="n1y-Gj-7BI"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                        <nil key="highlightedColor"/>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="2Hc-7l-vHQ"/>
-                                <exclude reference="cQb-DF-jIN"/>
-                            </mask>
-                        </variation>
-                    </label>
-                    <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8if-3Z-yOi">
-                        <rect key="frame" x="15" y="173" width="387" height="20"/>
-                        <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="20" id="LsZ-nq-5qK"/>
-                        </constraints>
-                    </webView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FsT-bD-AoZ">
-                        <rect key="frame" x="15" y="135" width="60" height="23"/>
+                        <rect key="frame" x="20" y="75" width="60" height="23"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="60" id="1Zf-Cz-SbD"/>
-                            <constraint firstAttribute="height" constant="23" id="eDe-bv-WwX"/>
+                            <constraint firstAttribute="height" constant="23" id="6FA-nH-nUX"/>
+                            <constraint firstAttribute="width" constant="60" id="KaG-mS-l2Q"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <inset key="imageEdgeInsets" minX="-5" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -152,10 +77,10 @@
                         </connections>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oIn-c9-3E9">
-                        <rect key="frame" x="342" y="135" width="60" height="23"/>
+                        <rect key="frame" x="337" y="75" width="60" height="23"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="23" id="AWK-5K-Uz6"/>
-                            <constraint firstAttribute="width" constant="60" id="BO6-8o-hPx"/>
+                            <constraint firstAttribute="width" constant="60" id="HU2-bb-TpD"/>
+                            <constraint firstAttribute="height" constant="23" id="bLk-SQ-iaT"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <inset key="imageEdgeInsets" minX="-5" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -169,35 +94,20 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="FVn-j3-D50" firstAttribute="top" secondItem="TTP-Dr-whr" secondAttribute="top" constant="15" id="0H4-vV-3rC"/>
-                    <constraint firstItem="8if-3Z-yOi" firstAttribute="top" secondItem="oIn-c9-3E9" secondAttribute="bottom" constant="15" id="1XY-Yt-BD8"/>
-                    <constraint firstItem="8if-3Z-yOi" firstAttribute="leading" secondItem="TTP-Dr-whr" secondAttribute="leading" constant="15" id="6Ij-oS-pAj"/>
                     <constraint firstItem="2WJ-zH-lck" firstAttribute="top" secondItem="ggU-g9-QJm" secondAttribute="top" id="9Jt-27-fpD"/>
-                    <constraint firstItem="exF-bl-lID" firstAttribute="top" secondItem="31Q-XO-3PJ" secondAttribute="top" id="9MX-1Z-thT"/>
                     <constraint firstItem="FVn-j3-D50" firstAttribute="leading" secondItem="TTP-Dr-whr" secondAttribute="leading" constant="15" id="9Xu-FT-4CZ"/>
-                    <constraint firstItem="31Q-XO-3PJ" firstAttribute="leading" secondItem="Gxx-8Y-OlK" secondAttribute="leading" id="Az1-A7-7P8"/>
-                    <constraint firstItem="oIn-c9-3E9" firstAttribute="top" secondItem="FsT-bD-AoZ" secondAttribute="top" id="CBI-kk-n5F"/>
-                    <constraint firstItem="oIn-c9-3E9" firstAttribute="trailing" secondItem="op0-9f-PQB" secondAttribute="trailing" id="EeT-rk-jPB"/>
-                    <constraint firstItem="Gxx-8Y-OlK" firstAttribute="top" secondItem="op0-9f-PQB" secondAttribute="bottom" constant="15" id="FYa-Hb-rDs"/>
-                    <constraint firstItem="fc4-IO-OaC" firstAttribute="top" secondItem="Gxx-8Y-OlK" secondAttribute="top" id="H5o-wZ-0CV"/>
                     <constraint firstItem="x8f-Tf-nFh" firstAttribute="leading" secondItem="2WJ-zH-lck" secondAttribute="trailing" constant="2" id="JZQ-HB-eMT"/>
                     <constraint firstAttribute="trailing" secondItem="op0-9f-PQB" secondAttribute="trailing" constant="15" id="OFs-SW-y2o"/>
+                    <constraint firstItem="FsT-bD-AoZ" firstAttribute="top" secondItem="op0-9f-PQB" secondAttribute="bottom" constant="20" id="OIC-cp-p6M"/>
                     <constraint firstAttribute="trailing" secondItem="x8f-Tf-nFh" secondAttribute="trailing" constant="10" id="OvV-Jv-Voq"/>
                     <constraint firstItem="x8f-Tf-nFh" firstAttribute="top" secondItem="ggU-g9-QJm" secondAttribute="top" id="S0T-mB-HOt"/>
-                    <constraint firstItem="31Q-XO-3PJ" firstAttribute="top" secondItem="Gxx-8Y-OlK" secondAttribute="bottom" constant="10" id="Ys1-rM-ayz"/>
-                    <constraint firstItem="FsT-bD-AoZ" firstAttribute="top" secondItem="31Q-XO-3PJ" secondAttribute="bottom" constant="15" id="aAI-da-1lY"/>
-                    <constraint firstItem="081-8M-11Z" firstAttribute="leading" secondItem="exF-bl-lID" secondAttribute="trailing" constant="50" id="dS6-Co-uXM"/>
+                    <constraint firstItem="oIn-c9-3E9" firstAttribute="top" secondItem="FsT-bD-AoZ" secondAttribute="top" id="TgK-wo-Lr6"/>
+                    <constraint firstItem="FsT-bD-AoZ" firstAttribute="leading" secondItem="TTP-Dr-whr" secondAttribute="leading" constant="20" id="VVK-sN-UbU"/>
+                    <constraint firstAttribute="trailing" secondItem="oIn-c9-3E9" secondAttribute="trailing" constant="20" id="Zr6-zl-ois"/>
                     <constraint firstItem="ggU-g9-QJm" firstAttribute="leading" secondItem="FVn-j3-D50" secondAttribute="trailing" id="fFR-aI-ryb"/>
-                    <constraint firstItem="exF-bl-lID" firstAttribute="leading" secondItem="fc4-IO-OaC" secondAttribute="leading" id="gjg-E2-p3A"/>
-                    <constraint firstAttribute="trailing" secondItem="8if-3Z-yOi" secondAttribute="trailing" constant="15" id="h1D-g1-6Bk"/>
-                    <constraint firstItem="fc4-IO-OaC" firstAttribute="leading" secondItem="Gxx-8Y-OlK" secondAttribute="trailing" constant="5" id="hiQ-B8-zyl"/>
-                    <constraint firstItem="081-8M-11Z" firstAttribute="top" secondItem="31Q-XO-3PJ" secondAttribute="top" id="mJg-sO-6YG"/>
                     <constraint firstItem="op0-9f-PQB" firstAttribute="leading" secondItem="TTP-Dr-whr" secondAttribute="leading" constant="15" id="oeU-1Z-EME"/>
                     <constraint firstItem="ggU-g9-QJm" firstAttribute="bottom" secondItem="FVn-j3-D50" secondAttribute="bottom" id="oqg-2h-dEF"/>
                     <constraint firstItem="op0-9f-PQB" firstAttribute="top" secondItem="x8f-Tf-nFh" secondAttribute="bottom" constant="10" id="rsh-xo-zCj"/>
-                    <constraint firstItem="H4x-aX-Ea7" firstAttribute="leading" secondItem="081-8M-11Z" secondAttribute="trailing" constant="5" id="sbV-QY-J1e"/>
-                    <constraint firstItem="Gxx-8Y-OlK" firstAttribute="leading" secondItem="op0-9f-PQB" secondAttribute="leading" id="u7H-tC-bcF"/>
-                    <constraint firstItem="FsT-bD-AoZ" firstAttribute="leading" secondItem="31Q-XO-3PJ" secondAttribute="leading" id="x2F-8j-2lF"/>
-                    <constraint firstItem="H4x-aX-Ea7" firstAttribute="top" secondItem="31Q-XO-3PJ" secondAttribute="top" id="yFG-iK-ACQ"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -206,18 +116,13 @@
                 <outlet property="buttonError" destination="FsT-bD-AoZ" id="Sax-UT-1Xc"/>
                 <outlet property="buttonNotes" destination="oIn-c9-3E9" id="Bu4-Pm-esA"/>
                 <outlet property="imageVIewCollect" destination="2WJ-zH-lck" id="GGl-Xn-t45"/>
-                <outlet property="labAnswerStatus" destination="fc4-IO-OaC" id="n4a-Hu-TLA"/>
                 <outlet property="labNumberWidth" destination="bJK-aq-w5o" id="kxB-NC-07w"/>
                 <outlet property="labTopicNumber" destination="FVn-j3-D50" id="ts1-Jb-XME"/>
                 <outlet property="labTopicType" destination="ggU-g9-QJm" id="8ei-TK-r0a"/>
-                <outlet property="labTureAnswer" destination="H4x-aX-Ea7" id="8eM-x7-Jju"/>
-                <outlet property="labUserAnswer" destination="exF-bl-lID" id="ObJ-cu-QVC"/>
-                <outlet property="webAnalysis" destination="8if-3Z-yOi" id="4Zx-Ez-tFW"/>
-                <outlet property="webAnalysisHeight" destination="LsZ-nq-5qK" id="bQo-yi-hwW"/>
                 <outlet property="webTitleHeight" destination="2kB-se-Xtw" id="Gdf-tI-phG"/>
                 <outlet property="webViewTitle" destination="op0-9f-PQB" id="oeG-JD-3z0"/>
             </connections>
-            <point key="canvasLocation" x="357.5" y="208"/>
+            <point key="canvasLocation" x="357.5" y="170"/>
         </tableViewCell>
     </objects>
     <resources>
