--- a/TyDtk/AnalysisQtype5Cell.xib
+++ b/TyDtk/AnalysisQtype5Cell.xib
@@ -6,11 +6,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="196" id="dgV-ME-dOM" customClass="AnalysisQtype5TableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="400" height="196"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="111" id="dgV-ME-dOM" customClass="AnalysisQtype5TableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="400" height="111"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="dgV-ME-dOM" id="990-1n-Mte">
-                <rect key="frame" x="0.0" y="0.0" width="400" height="195"/>
+                <rect key="frame" x="0.0" y="0.0" width="400" height="110"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1、" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ph3-eP-XQg">
@@ -67,50 +67,11 @@
                             <action selector="buttonCollectClick:" destination="dgV-ME-dOM" eventType="touchUpInside" id="d0h-n9-L94"/>
                         </connections>
                     </button>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="答题状态:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b27-6r-X8x">
-                        <rect key="frame" x="10" y="70" width="70" height="20"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="20" id="1dc-GH-Cwc"/>
-                            <constraint firstAttribute="width" constant="70" id="7g5-o3-iIc"/>
-                            <constraint firstAttribute="width" constant="70" id="UmT-qD-ZHi"/>
-                            <constraint firstAttribute="height" constant="20" id="sEs-sk-dhp"/>
-                            <constraint firstAttribute="width" constant="70" id="vD8-Yc-9Cl"/>
-                            <constraint firstAttribute="height" constant="20" id="wMR-vb-BTi"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                        <nil key="highlightedColor"/>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="1dc-GH-Cwc"/>
-                                <exclude reference="UmT-qD-ZHi"/>
-                                <exclude reference="vD8-Yc-9Cl"/>
-                                <exclude reference="wMR-vb-BTi"/>
-                            </mask>
-                        </variation>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="答题正确" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Par-rx-jc2">
-                        <rect key="frame" x="85" y="70" width="60" height="20"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="20" id="HFZ-UH-Sxr"/>
-                            <constraint firstAttribute="width" constant="60" id="xhR-jp-YOG"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zhq-YL-oTo">
-                        <rect key="frame" x="15" y="148" width="370" height="20"/>
-                        <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="20" id="w2u-Sf-0vO"/>
-                        </constraints>
-                    </webView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O2V-sF-dZe">
-                        <rect key="frame" x="10" y="110" width="60" height="23"/>
+                        <rect key="frame" x="10" y="65" width="60" height="23"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="60" id="COd-Ze-GAj"/>
-                            <constraint firstAttribute="height" constant="23" id="llF-5J-kms"/>
+                            <constraint firstAttribute="width" constant="60" id="lpX-ij-ygd"/>
+                            <constraint firstAttribute="height" constant="23" id="uZ1-4e-70l"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <inset key="imageEdgeInsets" minX="-5" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -122,10 +83,10 @@
                         </connections>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qo6-I5-jjJ">
-                        <rect key="frame" x="330" y="110" width="60" height="23"/>
+                        <rect key="frame" x="330" y="65" width="60" height="23"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="23" id="mk5-oO-rrq"/>
-                            <constraint firstAttribute="width" constant="60" id="oFb-QQ-hUJ"/>
+                            <constraint firstAttribute="height" constant="23" id="9uX-Zd-twE"/>
+                            <constraint firstAttribute="width" constant="60" id="zvY-pb-4BI"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <inset key="imageEdgeInsets" minX="-5" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -140,24 +101,17 @@
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="hVJ-Qb-Cer" secondAttribute="trailing" constant="10" id="0b2-5n-FOj"/>
                     <constraint firstItem="hVJ-Qb-Cer" firstAttribute="leading" secondItem="AqN-uQ-Js4" secondAttribute="trailing" constant="2" id="13F-vn-FGA"/>
-                    <constraint firstItem="b27-6r-X8x" firstAttribute="leading" secondItem="4df-VW-KLm" secondAttribute="leading" id="5UA-6A-k5u"/>
+                    <constraint firstItem="qo6-I5-jjJ" firstAttribute="top" secondItem="O2V-sF-dZe" secondAttribute="top" id="69n-xQ-Oii"/>
+                    <constraint firstItem="O2V-sF-dZe" firstAttribute="leading" secondItem="990-1n-Mte" secondAttribute="leading" constant="10" id="8kf-Hz-PLn"/>
                     <constraint firstItem="ph3-eP-XQg" firstAttribute="top" secondItem="990-1n-Mte" secondAttribute="top" constant="15" id="FFw-WJ-Qa2"/>
                     <constraint firstItem="fE0-Tr-NZT" firstAttribute="bottom" secondItem="ph3-eP-XQg" secondAttribute="bottom" id="McS-p4-k0R"/>
-                    <constraint firstItem="Par-rx-jc2" firstAttribute="top" secondItem="b27-6r-X8x" secondAttribute="top" id="N3O-t0-q8u"/>
                     <constraint firstItem="4df-VW-KLm" firstAttribute="leading" secondItem="990-1n-Mte" secondAttribute="leading" constant="10" id="N6P-vn-7qk"/>
-                    <constraint firstAttribute="trailing" secondItem="zhq-YL-oTo" secondAttribute="trailing" constant="15" id="OUY-bB-yBr"/>
-                    <constraint firstItem="zhq-YL-oTo" firstAttribute="leading" secondItem="990-1n-Mte" secondAttribute="leading" constant="15" id="RXZ-pa-gUE"/>
-                    <constraint firstItem="b27-6r-X8x" firstAttribute="top" secondItem="4df-VW-KLm" secondAttribute="bottom" constant="15" id="WjI-wx-7Ma"/>
                     <constraint firstItem="fE0-Tr-NZT" firstAttribute="leading" secondItem="ph3-eP-XQg" secondAttribute="trailing" id="eYh-ig-7Mt"/>
-                    <constraint firstItem="O2V-sF-dZe" firstAttribute="top" secondItem="b27-6r-X8x" secondAttribute="bottom" constant="20" id="h4E-2t-IuD"/>
-                    <constraint firstItem="Par-rx-jc2" firstAttribute="leading" secondItem="b27-6r-X8x" secondAttribute="trailing" constant="5" id="hwD-MJ-pLS"/>
-                    <constraint firstItem="qo6-I5-jjJ" firstAttribute="trailing" secondItem="4df-VW-KLm" secondAttribute="trailing" id="iN0-RN-quw"/>
-                    <constraint firstItem="zhq-YL-oTo" firstAttribute="top" secondItem="qo6-I5-jjJ" secondAttribute="bottom" constant="15" id="jDt-cf-iDz"/>
+                    <constraint firstItem="O2V-sF-dZe" firstAttribute="top" secondItem="4df-VW-KLm" secondAttribute="bottom" constant="10" id="hqR-kQ-vCb"/>
                     <constraint firstItem="AqN-uQ-Js4" firstAttribute="top" secondItem="fE0-Tr-NZT" secondAttribute="top" id="l1H-oZ-qT0"/>
                     <constraint firstItem="hVJ-Qb-Cer" firstAttribute="top" secondItem="fE0-Tr-NZT" secondAttribute="top" id="ld3-4o-Jtg"/>
                     <constraint firstItem="ph3-eP-XQg" firstAttribute="leading" secondItem="990-1n-Mte" secondAttribute="leading" constant="15" id="o31-QF-N6n"/>
-                    <constraint firstItem="O2V-sF-dZe" firstAttribute="leading" secondItem="b27-6r-X8x" secondAttribute="leading" id="oOw-Ia-voL"/>
-                    <constraint firstItem="qo6-I5-jjJ" firstAttribute="top" secondItem="O2V-sF-dZe" secondAttribute="top" id="pbE-VQ-Ncf"/>
+                    <constraint firstAttribute="trailing" secondItem="qo6-I5-jjJ" secondAttribute="trailing" constant="10" id="pXl-04-ek2"/>
                     <constraint firstItem="4df-VW-KLm" firstAttribute="top" secondItem="hVJ-Qb-Cer" secondAttribute="bottom" constant="10" id="rLo-7E-ZTb"/>
                     <constraint firstAttribute="trailing" secondItem="4df-VW-KLm" secondAttribute="trailing" constant="10" id="xU2-oR-z1X"/>
                 </constraints>
@@ -168,16 +122,13 @@
                 <outlet property="buttonError" destination="O2V-sF-dZe" id="LJd-oU-EEE"/>
                 <outlet property="buttonNotes" destination="qo6-I5-jjJ" id="Xik-xF-jeY"/>
                 <outlet property="imageVIewCollect" destination="AqN-uQ-Js4" id="QNn-hT-ca9"/>
-                <outlet property="labAnswerStatus" destination="Par-rx-jc2" id="Kuc-w4-Ckt"/>
                 <outlet property="labNumberWidth" destination="YQM-HW-ppF" id="4oX-fa-Ihe"/>
                 <outlet property="labTopicNumber" destination="ph3-eP-XQg" id="e5Y-Vc-r8g"/>
                 <outlet property="labTopicType" destination="fE0-Tr-NZT" id="rRZ-IW-eN3"/>
-                <outlet property="webAnalysis" destination="zhq-YL-oTo" id="fHs-xc-z8x"/>
-                <outlet property="webAnalysisHeight" destination="w2u-Sf-0vO" id="XjG-hf-H8n"/>
                 <outlet property="webTitleHeight" destination="sGQ-lV-nwi" id="8Qh-vo-TZ6"/>
                 <outlet property="webViewTitle" destination="4df-VW-KLm" id="Wr0-rz-a39"/>
             </connections>
-            <point key="canvasLocation" x="293" y="297"/>
+            <point key="canvasLocation" x="293" y="254.5"/>
         </tableViewCell>
     </objects>
     <resources>
